--- a/templates/text_app.html
+++ b/templates/text_app.html
@@ -7,15 +7,17 @@
 </head>
 <body>
     <div class="container mt-5">
-        <h2 class="text-center mb-4">Text Input App</h2>
+        <h2 class="text-center mb-4">Join / Create Game</h2>
         <div class="row justify-content-center">
             <div class="col-sm-4">
                 <div class="card">
                     <div class="card-body">
-                        <form action="/submit" method="post">
+                        <a class="btn btn-success" href="/match/create">Create</a>
+
+                        <form action="/match/join" method="get">
                             <div class="form-group">
                                 <label>Enter Text</label>
-                                <input type="text" name="user_input" class="form-control">
+                                <input type="number" name="id" class="form-control">
                             </div>
                             <input type="submit" name="submit" value="Submit" class="btn btn-primary">
                         </form>
